k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checklist-editor
spec:
  type: NodePort
  selector:
    app: checklist-editor
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
